# plex-watch-history

./: .gitignore  README.md  pyproject.toml
plex_watch_history/: __main__.py
