[tool.poetry]
name = "plex-watch-history"
version = "0.1.0"
description = "Manage Your Plex Watch History with Ease"
authors = ["Garrett Regier <garrettregier@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
plexapi = "^4.15.10"

[tool.poetry.scripts]
plex-watch-history = "plex_watch_history.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

